# better-youtube-caption

./: .env.example  .gitignore  .python-version  CONFIG.md  README.md  README_BUILD.md  background.js  build.js  config.js  content.js  main.py  manifest.json  package.json  popup.html  popup.js  pyproject.toml  sidepanel.html  subtitles.css  test.ipynb  test.py  test_captionRefiner.js  test_captionSummarizer.js  test_summary.py
.github/workflows/: build.yml
src/: background.js  captionRefiner.js  captionRefiner.js.map  captionSummarizer.js  captionSummarizer.js.map  config.js  constants.js  content.js  popup.js  refiner.js  segmentParser.js  sidepanel.js  storage.js  summaryWorkflow.js  timestampParser.js  transcript.js  url.js
src/api/: base.js  openrouter.js  scrapecreators.js
src/utils/: apiValidation.js  autoGeneration.js  backgroundHandlers.js  combobox.js  contextValidation.js  errorHandling.js  errors.js  exampleData.js  fontSize.js  generation.js  loadSummary.js  logger.js  messageHandler.js  messageUtils.js  messaging.js  modelSelection.js  opencc.js  popupSettings.js  promptBuilder.js  qualityUtils.js  schemas.js  select.js  settings.js  sidepanelSettings.js  subtitleRenderer.js  tooltip.js  ui.js  videoUtils.js
utils/: srtParser.js  storageManager.js  transcriptFetcher.js  transcriptRefiner.js  urlUtils.js
